header-mobile finalizado

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<header>
+  <img src="assets/img/logo.svg" class="logo" alt="logo Alura Geek" />
+  <button class="login">Login</button>
+  <img src="assets/img/lupa.svg" class="lupa" alt="Lupa que abre a area de pesquisa" />
+</header>
