--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -12,6 +12,7 @@ margin: 1rem;
 .login {
   width: 8.31rem;
   font-family: 'Raleway', sans-serif;
+  font-weight: 600;
   background-color: #fff;
   color: #2A7AE4;
   border: 1px solid #2A7AE4;
