finalizado a seção de consoles mobile

--- a/src/app/components/main/components/star-wars/star-wars.component.html
+++ b/src/app/components/main/components/star-wars/star-wars.component.html
@@ -25,13 +25,21 @@
       <a class="single_product">Ver produto</a>
     </div>
     <div class="starWars_product">
-      <img src="assets/img/yoda.jpg" alt="Action Figure Yoda" class="starWars_img" />
+      <img
+        src="assets/img/yoda.jpg"
+        alt="Action Figure Yoda"
+        class="starWars_img"
+      />
       <p class="description">Figure Yoda</p>
       <p class="price">R$ 60,00</p>
       <a class="single_product">Ver produto</a>
     </div>
     <div class="starWars_product">
-      <img src="assets/img/trooper.jpg" alt="Action Figure Storm trooper" class="starWars_img" />
+      <img
+        src="assets/img/trooper.jpg"
+        alt="Action Figure Storm trooper"
+        class="starWars_img"
+      />
       <p class="description">Figure Storm trooper</p>
       <p class="price">R$ 60,00</p>
       <a class="single_product">Ver produto</a>
