--- a/src/app/components/main/components/consoles/consoles.component.css
+++ b/src/app/components/main/components/consoles/consoles.component.css
@@ -1,4 +1,4 @@
-.starWars_header {
+.consoles_header {
   display: flex;
   justify-content: space-between;
   margin: 1rem;
@@ -25,12 +25,12 @@
   padding-right: 0;
 }
 
-.starWars_main {
+.consoles_main {
   display: flex;
   flex-wrap: wrap;
 }
 
-.starWars_product {
+.consoles_product {
   margin: 1rem;
   margin-top: 0;
   margin-right: 0;
