--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,12 +7,39 @@ margin: 1rem;
 
 .logo {
   width: 6.25rem;
+  height: 1.75rem;
+  margin-right: 2rem;
+}
+
+.search_bar {
+  width: 17rem;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  background: #F5F5F5;
+  padding: .5rem 1rem;
+  border-radius: 20px;
+  margin-right: 9rem;
+}
+
+.search {
+  width: 10.5rem;
+  border: none;
+  background: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: .875rem;
+  line-height: 1rem;
+  align-items: center;
+  color: #A2A2A2;
 }
 
 .login {
   width: 8.31rem;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
+  font-size: .875rem;
+  line-height: 1rem;
   background-color: #fff;
   color: #2A7AE4;
   border: 1px solid #2A7AE4;
@@ -21,4 +48,20 @@ margin: 1rem;
 
 .lupa {
   width: 1.065rem;
+}
+
+@media (min-width: 768px) {
+  .lupa {
+    display: none;
+  }
+
+  .login {
+    width: 10.375rem;
+    height: 2.5rem;
+    margin: 0 1rem;
+  }
+
+  .search_bar {
+    display: flex;
+  }
 }
