--- a/src/app/components/main/components/banner/banner.component.css
+++ b/src/app/components/main/components/banner/banner.component.css
@@ -20,6 +20,7 @@
   line-height: 1.625rem;
   margin: 0;
   margin-bottom: .5rem;
+  color: #fff;
 }
 
 .banner_desc {
@@ -29,6 +30,7 @@
   line-height: 1rem;
   margin: 0;
   margin-bottom: .5rem;
+  color: #fff;
 }
 
 .banner_button {
@@ -41,4 +43,29 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   color: #fff;
+  font-size: .875rem;
+  line-height: 1rem;
+}
+
+@media (min-width: 768px) {
+  .banner {
+    height: 22rem;
+  }
+
+  .banner_info {
+    margin: 2rem;
+  }
+
+  .banner_titulo {
+    font-size: 3.25rem;
+    line-height: 3.8125rem;
+    margin-bottom: 1rem;
+  }
+
+  .banner_desc {
+    font-weight: 700;
+    font-size: 1.375rem;
+    line-height: 1.625rem;
+    margin-bottom: 1rem;
+  }
 }
