--- a/src/app/components/main/components/star-wars/star-wars.component.html
+++ b/src/app/components/main/components/star-wars/star-wars.component.html
@@ -1,7 +1,7 @@
 <section class="starWars_list">
   <div class="starWars_header">
     <h2 class="title">Star Wars</h2>
-    <button class="see_all">Ver tudo 🡢</button>
+    <button class="see_all"><p>Ver tudo</p> <span class="arrow">🡢</span></button>
   </div>
   <div class="starWars_main">
     <div class="starWars_product">
