--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -65,3 +65,25 @@ margin: 1rem;
     display: flex;
   }
 }
+
+@media (min-width: 1366px) {
+  .logo {
+    width: 11rem;
+    height: 3.125rem;
+    margin-left: 8.5rem;
+  }
+
+  .search_bar {
+    width: 24.5625rem;
+    height: 2.5rem;
+    margin-right: 15.5rem;
+  }
+
+  .login {
+    width: 11.375rem;
+    height: 3.1875rem;
+    font-size: 1rem;
+    line-height: 1.1875rem;
+    margin-right: 8.5rem;
+  }
+}
