--- a/src/app/components/main/components/diversos/diversos.component.html
+++ b/src/app/components/main/components/diversos/diversos.component.html
@@ -44,5 +44,25 @@
       <p class="price">R$ 60,00</p>
       <a class="single_product">Ver produto</a>
     </div>
+    <div class="diversos_product">
+      <img
+        src="assets/img/vr.jpg"
+        alt="Imagem do Console Xbox Series X"
+        class="diversos_img"
+      />
+      <p class="description">Console Xbox series X</p>
+      <p class="price">R$ 60,00</p>
+      <a class="single_product">Ver produto</a>
+    </div>
+    <div class="diversos_product">
+      <img
+        src="assets/img/pikachu.jpg"
+        alt="Imagem Console Game Boy color"
+        class="diversos_img"
+      />
+      <p class="description">Console Game boy color</p>
+      <p class="price">R$ 60,00</p>
+      <a class="single_product">Ver produto</a>
+    </div>
   </div>
 </section>
