--- a/src/app/components/main/components/star-wars/star-wars.component.html
+++ b/src/app/components/main/components/star-wars/star-wars.component.html
@@ -1,7 +1,10 @@
 <section class="starWars_list">
   <div class="starWars_header">
     <h2 class="title">Star Wars</h2>
-    <button class="see_all"><p>Ver tudo</p> <span class="arrow">🡢</span></button>
+    <button class="see_all">
+      <p>Ver tudo</p>
+      <span class="arrow">🡢</span>
+    </button>
   </div>
   <div class="starWars_main">
     <div class="starWars_product">
@@ -41,6 +44,26 @@
         class="starWars_img"
       />
       <p class="description">Figure Storm trooper</p>
+      <p class="price">R$ 60,00</p>
+      <a class="single_product">Ver produto</a>
+    </div>
+    <div class="starWars_product">
+      <img
+        src="assets/img/baby_yoda.jpg"
+        alt="Action Figure Baby Yoda"
+        class="starWars_img"
+      />
+      <p class="description">Figure Baby Yoda</p>
+      <p class="price">R$ 60,00</p>
+      <a class="single_product">Ver produto</a>
+    </div>
+    <div class="starWars_product">
+      <img
+        src="assets/img/kyle.jpg"
+        alt="Action Figure Kyle Rem"
+        class="starWars_img"
+      />
+      <p class="description">Figure Kyle Rem</p>
       <p class="price">R$ 60,00</p>
       <a class="single_product">Ver produto</a>
     </div>
