--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -163,3 +163,49 @@
     width: 25rem;
   }
 }
+
+@media (min-width: 1366px) {
+  .footer_info {
+    display: block;
+  }
+
+  .footer_group {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+  }
+
+  .footer_info_links {
+    flex-direction: row;
+    align-items: flex-start;
+    margin-top: 4rem;
+    margin-left: 0;
+    margin-right: 7rem;
+  }
+
+  .footer_info_link {
+    margin-bottom: 1.5rem;
+  }
+
+  .footer_logo {
+    margin: 0;
+    margin-right: 7rem;
+  }
+
+  .info_link_group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .contato {
+    margin-top: 4rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .name_box, .text_box {
+    width: 29.3rem;
+  }
+}
