--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,27 +1,35 @@
 <footer>
   <section class="footer_info">
-    <div class="footer_info_links">
-      <img src="assets/img/logo_footer.svg" alt="logo da AluraGeek em tamanho grande" class="footer_logo" />
-      <a class="footer_info_link">Quem somo nós</a>
-      <a class="footer_info_link">Política de privacidade</a>
-      <a class="footer_info_link">Programa fidelidade</a>
-      <a class="footer_info_link">Nossas lojas</a>
-      <a class="footer_info_link">Quero ser franqueado</a>
-      <a class="footer_info_link">Anuncie aqui</a>
-    </div>
-    <div class="contato">
-      <h1 class="title">Fale conosco</h1>
-      <form class="fale_conosco">
-        <div class="name_box">
-          <label class="name">Nome</label>
-          <input type="text" class="footer_name"/>
+    <div class="footer_group">
+      <div class="footer_info_links">
+        <img
+          src="assets/img/logo_footer.svg"
+          alt="logo da AluraGeek em tamanho grande"
+          class="footer_logo"
+        />
+        <div class="info_link_group">
+          <a class="footer_info_link">Quem somo nós</a>
+          <a class="footer_info_link">Política de privacidade</a>
+          <a class="footer_info_link">Programa fidelidade</a>
+          <a class="footer_info_link">Nossas lojas</a>
+          <a class="footer_info_link">Quero ser franqueado</a>
+          <a class="footer_info_link">Anuncie aqui</a>
         </div>
-        <div class="text_box">
-          <label class="message">Escreva sua mensagem</label>
-          <textarea class="footer_message"></textarea>
-        </div>
-        <button class="footer_button">Enviar mensagem</button>
-      </form>
+      </div>
+      <div class="contato">
+        <h1 class="title">Fale conosco</h1>
+        <form class="fale_conosco">
+          <div class="name_box">
+            <label class="name">Nome</label>
+            <input type="text" class="footer_name" />
+          </div>
+          <div class="text_box">
+            <label class="message">Escreva sua mensagem</label>
+            <textarea class="footer_message"></textarea>
+          </div>
+          <button class="footer_button">Enviar mensagem</button>
+        </form>
+      </div>
     </div>
   </section>
   <section class="signature">
