--- a/src/app/components/main/components/consoles/consoles.component.css
+++ b/src/app/components/main/components/consoles/consoles.component.css
@@ -36,6 +36,10 @@
   margin-right: 0;
 }
 
+.consoles_product:nth-last-child(-n+2) {
+  display: none;
+}
+
 .description {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
@@ -87,11 +91,7 @@
     margin: 0;
     margin-right: 1rem;
   }
-  .consoles_product:last-child {
-    margin-right: 0;
-  }
-
-  .consoles_product:last-child {
+  .consoles_product:nth-last-child(3) {
     margin-right: 0;
   }
 
@@ -141,6 +141,14 @@
 
   .consoles_product {
     margin-right: 1.3rem;
+  }
+
+  .consoles_product:nth-last-child(3) {
+    margin-right: 1.3rem;
+  }
+
+  .consoles_product:last-child {
+    margin-right: 0;
   }
 
   .consoles_product:nth-last-child(-n+2) {
