criado json-server e consumido pela página home

--- a/src/app/components/main/components/consoles/consoles.component.css
+++ b/src/app/components/main/components/consoles/consoles.component.css
@@ -40,7 +40,7 @@
   display: none;
 }
 
-.description {
+.product_title {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
   font-size: .875rem;
