--- a/src/app/components/main/components/star-wars/star-wars.component.html
+++ b/src/app/components/main/components/star-wars/star-wars.component.html
@@ -7,64 +7,14 @@
     </button>
   </div>
   <div class="starWars_main">
-    <div class="starWars_product">
+    <div class="starWars_product" *ngFor="let product of products">
       <img
-        src="assets/img/caneca.jpg"
+        [src]="product.image"
         alt="Caneca capacete storm trooper"
         class="starWars_img"
       />
-      <p class="description">Caneca Storm trooper</p>
-      <p class="price">R$ 60,00</p>
-      <a class="single_product">Ver produto</a>
-    </div>
-    <div class="starWars_product">
-      <img
-        src="assets/img/vader.jpg"
-        alt="Bonecos de lego montados, Darth Vader, Black Storm trooper"
-        class="starWars_img"
-      />
-      <p class="description">Lego Dark side</p>
-      <p class="price">R$ 60,00</p>
-      <a class="single_product">Ver produto</a>
-    </div>
-    <div class="starWars_product">
-      <img
-        src="assets/img/yoda.jpg"
-        alt="Action Figure Yoda"
-        class="starWars_img"
-      />
-      <p class="description">Figure Yoda</p>
-      <p class="price">R$ 60,00</p>
-      <a class="single_product">Ver produto</a>
-    </div>
-    <div class="starWars_product">
-      <img
-        src="assets/img/trooper.jpg"
-        alt="Action Figure Storm trooper"
-        class="starWars_img"
-      />
-      <p class="description">Figure Storm trooper</p>
-      <p class="price">R$ 60,00</p>
-      <a class="single_product">Ver produto</a>
-    </div>
-    <div class="starWars_product">
-      <img
-        src="assets/img/baby_yoda.jpg"
-        alt="Action Figure Baby Yoda"
-        class="starWars_img"
-      />
-      <p class="description">Figure Baby Yoda</p>
-      <p class="price">R$ 60,00</p>
-      <a class="single_product">Ver produto</a>
-    </div>
-    <div class="starWars_product">
-      <img
-        src="assets/img/kyle.jpg"
-        alt="Action Figure Kyle Rem"
-        class="starWars_img"
-      />
-      <p class="description">Figure Kyle Rem</p>
-      <p class="price">R$ 60,00</p>
+      <p class="product_title">{{ product.title }}</p>
+      <p class="price">{{ product.price }}</p>
       <a class="single_product">Ver produto</a>
     </div>
   </div>
