--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
-  <img src="assets/img/logo.svg" class="logo" alt="logo Alura Geek" />
+  <img src="assets/img/logo.svg" class="logo" alt="logo Alura Geek" [routerLink]="['']" />
   <div class="search_bar">
     <input type="text" class="search" placeholder="O que deseja encontrar?" />
     <img src="assets/img/lupa_grey.svg" alt="imagem de uma lupa" class="lupa_grey">
   </div>
-  <button class="login">Login</button>
+  <button class="login" [routerLink]="['login']">Login</button>
   <img src="assets/img/lupa.svg" class="lupa" alt="Lupa que abre a area de pesquisa" />
 </header>
