finalizado dynamic routes

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,2 @@
 <app-banner></app-banner>
-<app-star-wars></app-star-wars>
-<app-consoles></app-consoles>
-<app-diversos></app-diversos>
+<app-items></app-items>
