--- a/src/app/components/main/components/items/items.component.css
+++ b/src/app/components/main/components/items/items.component.css
@@ -1,4 +1,4 @@
-.starWars_header {
+.items_header {
   display: flex;
   justify-content: space-between;
   margin: 1rem;
@@ -25,18 +25,18 @@
   padding-right: 0;
 }
 
-.starWars_main {
+.items_main {
   display: flex;
   flex-wrap: wrap;
 }
 
-.starWars_product {
+.items_product {
   margin: 1rem;
   margin-top: 0;
   margin-right: 0;
 }
 
-.starWars_product:nth-last-child(-n+2) {
+.items_product:nth-last-child(-n+2) {
   display: none;
 }
 
@@ -68,7 +68,10 @@
 }
 
 @media (min-width: 768px) {
-  .starWars_header {
+  .items_list {
+    margin-bottom: 2rem;
+  }
+  .items_header {
     margin: 1rem 2rem;
   }
 
@@ -84,24 +87,24 @@
     font-size: 1rem;
   }
 
-  .starWars_main {
+  .items_main {
     margin: 0 2rem;
   }
 
-  .starWars_product {
+  .items_product {
     margin: 0;
     margin-right: 1rem;
   }
 
-  .starWars_product:nth-last-child(3) {
+  .items_product:nth-last-child(3) {
     margin-right: 0;
   }
 
-  .starWars_product:nth-last-child(-n+2) {
+  .items_product:nth-last-child(-n+2) {
     display: none;
   }
 
-  .starWars_img {
+  .items_img {
     width: 10.25rem;
     height: 10.875rem;
   }
@@ -113,7 +116,7 @@
 }
 
 @media (min-width: 1366px) {
-  .starWars_header {
+  .items_header {
     margin: 1rem 9.5rem;
   }
   .title {
@@ -131,28 +134,28 @@
     width: 1rem;
   }
 
-  .starWars_main {
+  .items_main {
     margin: 0 9.5rem;
   }
 
-  .starWars_img {
+  .items_img {
     width: 9.75rem;
     height: 10.875rem;
   }
 
-  .starWars_product {
+  .items_product {
     margin-right: 1.3rem;
   }
 
-  .starWars_product:nth-last-child(3) {
+  .items_product:nth-last-child(3) {
     margin-right: 1.3rem;
   }
 
-  .starWars_product:last-child {
+  .items_product:last-child {
     margin-right: 0;
   }
 
-  .starWars_product:nth-last-child(-n+2) {
+  .items_product:nth-last-child(-n+2) {
     display: inline;
   }
 }
