--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -1,30 +1,30 @@
 <app-header></app-header>
 <main>
-  <form class="product_form">
+  <form class="product_form" (ngSubmit)="upload()">
     <h1 class="title">Adiconar novo produtdo</h1>
     <div class="image">
       <label for="" class="image_text">URL da imagem</label>
-      <input type="text" class="image_input" />
+      <input type="text" class="image_input" [(ngModel)]="image" name="image"/>
     </div>
     <div class="image">
-      <label for="" class="image_text">Consoles</label>
-      <input type="text" class="image_input" />
+      <label for="" class="image_text">URL do banner</label>
+      <input type="text" class="image_input"[(ngModel)]="imageBanner" name="imageBanner"/>
     </div>
     <div class="image">
       <label for="" class="image_text">Categoria</label>
-      <input type="text" class="image_input" />
+      <input type="text" class="image_input" [(ngModel)]="category" name="category"/>
     </div>
     <div class="image">
       <label for="" class="image_text">Nome do produto</label>
-      <input type="text" class="image_input" />
+      <input type="text" class="image_input" [(ngModel)]="title" name="title"/>
     </div>
     <div class="image">
       <label for="" class="image_text">Preço do produto</label>
-      <input type="text" class="image_input" />
+      <input type="text" class="image_input" [(ngModel)]="price" name="price"/>
     </div>
     <div class="image_description">
       <label for="" class="image_label_textarea">Descrição do produto</label>
-      <textarea class="image_textarea"></textarea>
+      <textarea class="image_textarea" [(ngModel)]="description" name="description"></textarea>
     </div>
     <button class="button_form">Adicionar produto</button>
   </form>
