ajustes de layout e links

--- a/src/app/components/main/components/banner/banner.component.html
+++ b/src/app/components/main/components/banner/banner.component.html
@@ -2,6 +2,8 @@
   <div class="banner_info">
     <h1 class="banner_titulo">Dezembro Promocional</h1>
     <p class="banner_desc">Produtos selecionados com 33% de desconto</p>
-    <button class="banner_button">Ver Consoles</button>
+    <a href="#consoles">
+      <button class="banner_button">Ver Consoles</button>
+    </a>
   </div>
 </section>
