--- a/src/app/components/main/components/banner/banner.component.css
+++ b/src/app/components/main/components/banner/banner.component.css
@@ -47,6 +47,12 @@
   line-height: 1rem;
 }
 
+a:visited {
+  text-decoration: none;
+  text-transform: none;
+  color: #fff;
+}
+
 @media (min-width: 768px) {
   .banner {
     height: 22rem;
@@ -67,5 +73,11 @@
     font-size: 1.375rem;
     line-height: 1.625rem;
     margin-bottom: 1rem;
+  }
+
+  @media (min-width: 1366px) {
+    .banner_info {
+      margin-left: 9.5rem;
+    }
   }
 }
